Fixed styling issues on mobile

--- a/src/app/components/body/body.component.scss
+++ b/src/app/components/body/body.component.scss
@@ -7,11 +7,23 @@
 .wavesContainer {
   height: 50%;
   width: 110%;
+  position: absolute;
+  z-index: -1;
+  top: 60%;
+}
+
+.wavesContainer::after {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 100%;
+  height: 10px;
+  background-color: var(--lightColor);
 }
 
 .bodyContainer {
   width: 100%;
-  height: 100%;
   position: relative;
   display: flex;
   justify-content: flex-end;
@@ -21,15 +33,19 @@
 
 .bodySpacer {
   height: 55%;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  display: none;
 }
 
 .contentContainer {
+  margin-top: 6vh;
   width: 100%;
   height: 80%;
-  position: absolute;
+  position: relative;
   align-items: center;
   color: rgb(white, 0.6);
-  top: 6%;
 }
 
 .backgroundFooter {
