--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 3.5rem;
+  margin-bottom: 2rem;
 }
 
 .searchForm {
